seems to produce sweet results

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ timely = { version = "0.3.0", git = "https://github.com/frankmcsherry/timely-dat
 timely_communication = { version = "0.1.8", git = "https://github.com/frankmcsherry/timely-dataflow" }
 abomonation = { git = "https://github.com/frankmcsherry/abomonation" }
 abomonation_derive = { git = "https://github.com/mystor/abomonation_derive.git" }
+
+[profile.release]
+opt-level = 3
+debug = true
+rpath = false
+lto = false
+debug-assertions = false
