word_count square wave experiment

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ version = "0.0.1"
 build = "build.rs"
 
 [dependencies]
-timely = { version = "0.3.0", git = "https://github.com/frankmcsherry/timely-dataflow" }
-timely_communication = { version = "0.1.8", git = "https://github.com/frankmcsherry/timely-dataflow" }
-abomonation = { git = "https://github.com/frankmcsherry/abomonation" }
-abomonation_derive = { git = "https://github.com/mystor/abomonation_derive.git" }
+timely = "0.5.0"
+timely_communication = "0.5.0"
+abomonation = "^0.5"
+abomonation_derive = "^0.3"
 rand = "^0.3.18"
 fnv="1.0"
 
