--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ abomonation = "^0.5"
 abomonation_derive = "^0.3"
 rand = "^0.3.18"
 fnv="1.0"
+redis = "0.8"
 
 # [profile.release]
 # opt-level = 3
