Move to Timely master
Signed-off-by: Moritz Hoffmann <moritz.hoffmann@inf.ethz.ch>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ version = "0.0.1"
 build = "build.rs"
 
 [dependencies]
-timely = "0.5.0"
-timely_communication = "0.5.0"
+timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git" }
 abomonation = "^0.5"
 abomonation_derive = "^0.3"
 rand = "^0.3.18"
