--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ abomonation = "^0.5"
 abomonation_derive = "^0.3"
 rand = "^0.5"
 fnv="1.0"
-zipf = "3.1"
+zipf = "^4.0"
 
 # [profile.release]
 # opt-level = 3
