--- a/nexmark/Cargo.toml
+++ b/nexmark/Cargo.toml
@@ -10,7 +10,7 @@ default = ["dynamic_scaling_mechanism/bin-8"]
 differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git" }
 timely = "^0.6"
 abomonation = "0.5"
-abomonation_derive = "*"
+abomonation_derive = "0.3"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
