--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ bin-18 = []
 bin-19 = []
 bin-20 = []
 
+fake_stateful = []
+
 [dependencies]
 #timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git" }
 timely = "0.6"
