--- a/nexmark/Cargo.toml
+++ b/nexmark/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Frank McSherry <fmcsherry@me.com>"]
 
 [features]
 default = ["dynamic_scaling_mechanism/bin-8"]
+fake_stateful = ["dynamic_scaling_mechanism/fake_stateful"]
 
 [dependencies]
 differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git" }
