--- a/nexmark/Cargo.toml
+++ b/nexmark/Cargo.toml
@@ -8,11 +8,11 @@ default = ["dynamic_scaling_mechanism/bin-8"]
 fake_stateful = ["dynamic_scaling_mechanism/fake_stateful"]
 
 [dependencies]
-differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git" }
-timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git"}
-#timely = "0.6"
-abomonation = { git = "https://github.com/frankmcsherry/abomonation.git" }
-#abomonation = "^0.5"
+#differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git" }
+#timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git"}
+timely = "0.7"
+#abomonation = { git = "https://github.com/frankmcsherry/abomonation.git" }
+abomonation = "^0.7"
 abomonation_derive = "0.3"
 serde = "*"
 serde_json = "*"
@@ -22,8 +22,8 @@ fnv="1.0"
 streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
 dynamic_scaling_mechanism = { version = "0.0.1", path = "..", default_features = false }
 
-[patch.crates-io]
-timely = { git = 'https://github.com/frankmcsherry/timely-dataflow.git' }
+#[patch.crates-io]
+#timely = { git = 'https://github.com/frankmcsherry/timely-dataflow.git' }
 
 [profile.release]
 # opt-level = 3
