--- a/nexmark/Cargo.toml
+++ b/nexmark/Cargo.toml
@@ -22,6 +22,7 @@ serde_derive = "*"
 rand = "*"
 fnv="1.0"
 streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
+streaming-harness-hdrhist = "0.2.1"
 dynamic_scaling_mechanism = { version = "0.0.1", path = "..", default_features = false }
 
 [dependencies.clap]
